--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ input[type="button"] {
 }
 
 input[type="text"] {
+  text-align: right;
   background-color: white;
   border: solid black 2px;
   width: 100%;
